--- a/WordZ/builds/WordZ.html
+++ b/WordZ/builds/WordZ.html
@@ -1171,21 +1171,58 @@
 
   // "Gun topics" here = game/chat flavor only (matches/loadouts vibes), no real-world instructions.
   const TOPIC_LINES = {
-    ops: ["^2ping ok.","^7relay quiet.","^3instance idle.","^7signals stable.", "^7question: ping stable or spicy?", "^7quote: We require more vespene gas."],
+    ops: ["^2ping ok.","^7relay quiet.","^3instance idle.","^7signals stable.",
+"^7ops: local-only, still alive.",
+"^7ops question: ship shell or polish bevels?",
+],
     relay: ["^7bus: clear.","^7packets: calm.","^5handoff clean."],
     status: ["^2online.","^7idle.","^4watching."],
-    clan: ["^7[CLAN] chatter drifting.","^7someone joined the room.","^7someone left a note.", "^7quote: My life for Aiur.", "^7quote: En Taro Adun.", "^7question: who’s hosting the next duel set?", "^7question: K-style nostalgia check?"],
-    room: ["^7room feels light today.","^7matchmaking: imaginary.", "^7quote: You must construct additional pylons.", "^7quote: Battlecruiser operational.", "^7quote: Nuclear launch detected.", "^7question: 1v1 in hallway or arena?", "^7question: do you warm up with wallshots?"],
-    matches: ["^3warmup only.","^7no ranked. just motion.", "^7question: slash-sound ASMR or mute?", "^7question: which map is your muscle memory?", "^7quote: Carrier has arrived."],
-    patch: ["^7notes are incomplete.","^7build feels stable.", "^7question: bevels correct, ship it?", "^7question: what changed since last freeze?"],
+    clan: ["^7[CLAN] chatter drifting.","^7someone joined the room.","^7someone left a note.",
+"^7[WrdZ] roll call.",
+"^7question: duel set or chill lobby?",
+"^7question: hallway is calling—who’s in?",
+"^7question: what map is muscle memory for you?",
+"^7quote: My life for Aiur.",
+"^7quote: En Taro Adun.",
+],
+    room: ["^7room feels light today.","^7matchmaking: imaginary.",
+"^7question: spectate or queue?",
+"^7question: ping smooth or spicy?",
+"^7quote: You must construct additional pylons.",
+"^7quote: Battlecruiser operational.",
+"^7quote: Nuclear launch detected.",
+],
+    matches: ["^3warmup only.","^7no ranked. just motion.",
+"^7question: k-style nostalgia check?",
+"^7question: aim calm or flick chaos?",
+"^7question: one more round—what’s your pick?",
+"^7question: warmup with wallshots or straight in?",
+],
+    patch: ["^7notes are incomplete.","^7build feels stable."],
     version: ["^7v0.0.x energy.","^7shell-first, always."],
-    notes: ["^7log appended.","^7archived locally.", "^7question: what do we freeze next?", "^7question: what’s the smallest useful log line?"],
+    notes: ["^7log appended.","^7archived locally.",
+"^7question: what do we freeze next?",
+"^7question: what’s the smallest useful log line?",
+"^7margin note: saved.",
+],
     portal: ["^3blue link looks real.","^7click-through confirmed."],
     links: ["^3external jump armed.","^7confirm modal: expected."],
-    ui: ["^7bevels: correct.","^7angles: business."],
-    vibe: ["^7quiet window.","^7milk-cream palette.", "^7quote: Power overwhelming.", "^7question: yakult, y2k, or punk tonight?"],
+    ui: ["^7bevels: correct.","^7angles: business.",
+"^7ui check: borders held.",
+"^7ui check: buttons clicky.",
+"^7question: glow subtle or loud?",
+],
+    vibe: ["^7quiet window.","^7milk-cream palette.",
+"^7yakult-core, bevels sharp.",
+"^7question: y2k switch later?",
+"^7quote: We require more vespene gas.",
+"^7quote: Carrier has arrived.",
+],
     timing: ["^7slow loop. steady hand.","^7no rush."],
-    bugs: ["^6edge case spotted.","^6input sanitized.", "^7question: repro steps or folklore?", "^7question: was it a race condition or vibes?"],
+    bugs: ["^6edge case spotted.","^6input sanitized.",
+"^7question: repro steps or folklore?",
+"^7question: race condition or vibes?",
+],
     edges: ["^6corners squared.","^6borders held."],
     inputs: ["^6user typed.","^6shell replied."],
     logs: ["^7remember this frame.","^7the log holds."],
@@ -1633,14 +1670,14 @@
     { who: "Echo_Bot", msg: "can you hear me now?"},
     { who: "Agent_X", msg: "stay frosty."},
     { who: "Watcher", msg: "always watching, never blinking."}
-    { who: "WordZ", msg: "^7quote: You must construct additional pylons."},
-    { who: "Oracle", msg: "^7quote: My life for Aiur."},
-    { who: "Agent_X", msg: "^7quote: Battlecruiser operational."},
-    { who: "Watcher", msg: "^7quote: Nuclear launch detected."},
     { who: "WordZ", msg: "^7question: k-style or classic aim?"},
     { who: "WordZ", msg: "^7question: what map feels like home?"},
-    { who: "Echo_Bot", msg: "^7quote: Spawn more Overlords."},
-    { who: "System", msg: "^7question: smooth ping or spicy ping?"},
+    { who: "Oracle", msg: "^7quote: En Taro Adun."},
+    { who: "Agent_X", msg: "^7quote: Battlecruiser operational."},
+    { who: "Watcher", msg: "^7quote: Nuclear launch detected."},
+    { who: "Echo_Bot", msg: "^7quote: You must construct additional pylons."},
+    { who: "System", msg: "^7[WrdZ] lobby lights on."},
+    { who: "System", msg: "^7note: bevels aligned."},
   ];
 
   setInterval(() => {
